--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "ammadeuss/laravel-html-dom-parser": "^1.1",
         "anhskohbo/no-captcha": "^3.0",
         "doctrine/dbal": "^2.9",
+        "fabpot/goutte": "^3.2",
         "fideloper/proxy": "~4.0",
-        "gloudemans/shoppingcart": "^2.6",
         "guzzlehttp/guzzle": "^6.3",
         "laracasts/presenter": "^0.2.1",
         "laravel/framework": "5.7.*",
